#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2025-04-15> *0.9.22*

Enhanced session management

- Refactored =ollama-buddy-sessions-save= to autogenerate session names using timestamp and model.
- Improved session saving/loading by integrating org file handling.
- Updated mode line to display current session name dynamically.

** <2025-04-11> *0.9.21*

Add history edit/view toggle features, so effectively merging the former history display into the history edit functionality.

** <2025-04-04> *0.9.20*

- Added =ollama-buddy-awesome.el= to integrate Awesome ChatGPT Prompts.
  
** <2025-04-01> *0.9.17*

- Added link to =ollama-buddy= info manual from the chat buffer and transient menu as MELPA has now picked it up and installed it!

** <2025-03-28> *0.9.16*

- Added =ollama-buddy-fix-encoding-issues= to handle text encoding problems.
- Refactored and streamline fabric pattern description handling.
- Removed unused fabric pattern categories to enhance maintainability.

** <2025-03-28> *0.9.15*

- Implement asynchronous operations for model management
  - Introduce non-blocking API requests for fetching, copying, and deleting models
- Add caching mechanisms to improve efficiency
  - Cache model data to reduce redundant API calls
  - Manage cache expiration with timestamps and time-to-live settings
- Update status line to reflect ongoing background operations
- Ensure smooth user interaction by minimizing wait times and enhancing performance

** <2025-03-26> *0.9.13*

- Added automatic writing of last response to a register
- Added M-r to search through prompt history

** <2025-03-25> *0.9.12*

- Added experimental Claude AI support!