@@ -8,6 +8,28 @@
 
 * Features as they come in
 
+** <2025-04-17> *0.9.23*
+
+Refactored history and model management for remote LLMs
+
+Removed redundant history and model management functions from =ollama-buddy-claude.el= and =ollama-buddy-openai.el=. Replaced them with shared implementations to streamline code and reduce duplication
+
+** <2025-04-15> *0.9.22*
+
+Enhanced session management
+
+- Refactored =ollama-buddy-sessions-save= to autogenerate session names using timestamp and model.
+- Improved session saving/loading by integrating org file handling.
+- Updated mode line to display current session name dynamically.
+
+Several improvements to session management, making it more intuitive and efficient for users. Here's a breakdown of the new functionality:
+
+When saving a session, Ollama Buddy now creates a default name using the current timestamp and model name, users can still provide a custom name if desired.
+
+An org file is now saved alongside the original elisp session file. This allows for better session recall as all interactions will be pulled back with the underlying session parameters still restored as before. There is an additional benefit in not only recalling precisely the session and any additional org interactions but also quickly saving to an org file for potential later inspection. Along with the improved autogenerated session name, this means it is much faster and more intuitive to save a snapshot of the current chat interaction.
+
+The modeline now displays the current session name!
+
 ** <2025-04-11> *0.9.21*
 
 Add history edit/view toggle features, so effectively merging the former history display into the history edit functionality.
